# link-shortener

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: checks.yml
.sqlx/: query-05b3f5c6ed1b5cdeb4dde755b349a760cc553395bb2c102d441e2c01c0c7c757.json  query-552a3b0f15869f32244fe60a78ba1655c3585ac9569ca3aa907e989e555fff14.json  query-59b96083379922d5f5cd1fd3a1991a69a1cd3f0f3fc3ae4d8aadc2d6698d8e5b.json  query-59c7383b5238e9bba9a55a8d0a30a8409bea95cd8bf73e40e07de52470c062b8.json  query-72e29c2c89df8e1631f63b4e4cb01b13e312d6601dc00826dd7e67f5019ef3fd.json  query-7af8291206b13501391e5dc80ed5290822cb21c47d8b274b5ef5e766359b9ccb.json  query-7b0c811c301893f44cacf31f1226e112f9f1a0f64010792d0942d0776dee7a00.json  query-7be4c2303be93f85ddfd13dc8ee369008ff83e3f7e63c30f3eef46f2a1101b76.json  query-9fb3138344f695ce6954523215d7a1bfcf38329735d68f3c4b30e3842c9fda7a.json  query-b204222dc5a608bec1e9a325bf5b7475affdd99c14b84982f8e636e49e08e58c.json  query-cae0d4d448011a93e8dc9ec78cc8c506a0cdddd5baace87163ba42be5082f08f.json  query-e51a9ac1eda66e4cc5ab6c1c1a7e7e48c16a7ac52ff85d52b58136092585f769.json  query-ff26935878d93ffd8ea45c35c7ebf5c9bb29d36a46859036b237e860fd8e5a4d.json
migrations/: 0001_initial.down.sql  0001_initial.up.sql  0002_dashboard_auth.down.sql  0002_dashboard_auth.up.sql
src/: config.rs  main.rs
src/common/: argon2.rs  cli.rs  dashboard_auth.rs  mod.rs  platform_auth.rs  validation.rs
src/db/: dashboard_login_token.rs  link_visits.rs  links.rs  mod.rs  platforms.rs
src/routes/: mod.rs  redirect.rs  static_files.rs
(+13 files in other folders)
