[package]
name = "link-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.14.0"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
poem = { version = "3.1.11", features = ["test", "session"] }
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.141"
serde_valid = "1.0.5"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v7", "serde"] }
